--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# custom
+/vscode
+/ios
+/linux
+/macos
+/web
+/lib/main.dart
+
