--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   android_alarm_manager_plus: ^4.0.7
   audioplayers: ^6.4.0
+  firebase_core: ^3.12.1
+  firebase_storage: ^12.4.4
+  cloud_firestore: ^5.6.5
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
